--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,18 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer>
+    <div className="footer" id="footer">
+      <p id="footer-txt">
+        &copy; Zach Imerzel |
+        <a href="https://www.linkedin.com/in/zach-imerzel-336b9414b/" target="_blank" rel="noreferrer" id="LinkedIn">
+          | LinkedIn |
+        </a>
+        <a href="https://github.com/Zimerzel" target="_blank" rel="noreferrer" id="Github">| Github |</a>
+        <a href= "https://docdro.id/bBZ6vQs" target="_blank" rel="noreferrer" id="Download" download>
+            | Download Resume
+        </a>
+      </p>
+    </div>
+  </footer>
 </html>
