--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
           | LinkedIn |
         </a>
         <a href="https://github.com/Zimerzel" target="_blank" rel="noreferrer" id="Github">| Github |</a>
-        <a href= "https://docdro.id/bBZ6vQs" target="_blank" rel="noreferrer" id="Download" download>
+        <a href= "./src/assets/images/resume-min.png" target="_blank" rel="noreferrer" id="Download" download="Zach's Resume">
             | Download Resume
         </a>
       </p>
