resume download fixed

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     -->
   </body>
   <footer>
+  <img src="/public/resume.png" width="200px"/>
     <div className="footer" id="footer">
       <p id="footer-txt">
         &copy; Zach Imerzel |
@@ -48,9 +49,7 @@
           | LinkedIn |
         </a>
         <a href="https://github.com/Zimerzel" target="_blank" rel="noreferrer" id="Github">| Github |</a>
-        <a href= "../src/assets/images/resume-min.png" id="Download" download>
-            | Download Resume
-        </a>
+        <a href="https://github.com/Zimerzel/react-app-portfolio/raw/main/src/assets/images/resume-min.png" id="Download" download>Download Resume</a>
       </p>
     </div>
   </footer>
